 - [ADDED]		Added license popup
 - [FIXED]		No data shown on orientation change
 - [ADDED]		Added title with count of top message senders for the chart fragment
 - [ADDED]		Added an imporved icon for the launcher
 - [ADDED]		Minor styles for total message count
 - [CHANGED]	Reworded some strings to make it better
 - [REMOVED]	Removed some debug log statements

MessageCounter 2.0.68 [July 2013]
 - [CHANGED]	Change in the way contact info is read from sms table in the library
 - [CHANGED]	Minor optimizations for Chart Display page
 - [FIXED]		Fixed a chart value calculation error
 
MessageCounter 2.0.80 [July 2013]
 - [FIXED]		Project naming in AppStore
 - [FIXED]		Messages from same contact using multiple address was duplicated
 - [CHANGED]	Changed the default contact image to that of the platform
 - [OPTIMIZED]	Optimizations
 
MessageCounter 2.0.84 [July 2013]
 - [ADDED]		Sent message count
 - [OPTIMIZED]	Optimizations
 
MessageCounter 2.0.94 [July 2013]
 - [FIXED]		Fix for Chart Size issues
 - [ADDED]		Text describing Other Senders in Chart Page
 - [ADDED]		Share app added in the menu 
 - [ADDED]		Experimental support for French language
 - [ADDED]		Section Heading styles for section headings
 
MessageCounter 2.0.96 [August 2013]
 - [CHANGED]	Color theme for chart
 - [CHANGED]	Chart starts from 12'O clock position
 - [CHANGED]	Start of Test in chart getting clipped  

MessageCounter 2.0.99 [August 2013]
 - [CHANGED]	Built against API 18
 - [CHANGED]	Colors in chart
 - [ADDED]		Share this app
 - [ADDED]		Support for large screens	
 
MessageCounter 2.0.102 [November 2013]
 - [ADDED]		Support for Spanish language 
 - [ADDED]		Share icon in actionbar

MessageCounter 2.1.20 [December 2013]
 - [CHANGED]	Supports API 8 and above
 - [CHANGED]	ViewPager implementation to support more devices
 - [CHANGED]	Layout Improvements
 - [ADDED]		Minor animations
 - [CHANGED]	About page moved as a fragment from menu
 - [OPTIMIZED]	Operations
 
 - [CHANGED]	Disabled orientation change