@@ -1,11 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <com.ae.apps.messagecounter.fragments
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</LinearLayout>
